--- a/package.json
+++ b/package.json
@@ -7,20 +7,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.2.0",
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
     "better-scroll": "^1.15.2",
+    "customize-cra": "^0.9.1",
     "http-proxy-middleware": "^1.0.3",
+    "moment": "^2.25.3",
     "react": "^16.13.1",
+    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "vant": "^2.8.0"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "antd-dayjs-webpack-plugin": "^1.0.0"
   }
 }
