--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "better-scroll": "^1.15.2",
     "customize-cra": "^0.9.1",
     "http-proxy-middleware": "^1.0.3",
+    "koa": "^2.12.0",
+    "koa-router": "^8.0.8",
+    "koa-static": "^5.0.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "moment": "^2.25.3",
+    "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
@@ -28,7 +32,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "dev": "nodemon ./server/entry.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,6 +52,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "antd-dayjs-webpack-plugin": "^1.0.0"
+    "antd-dayjs-webpack-plugin": "^1.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0"
   }
 }
