--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-keep-alive": "^2.5.2",
+    "react-lazyload": "^2.6.7",
     "react-loadable": "^5.5.0",
     "react-router-cache-route": "^1.8.4",
     "react-router-dom": "^5.1.2",
