--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
-    "babel-plugin-import": "^1.13.0",
     "better-scroll": "^1.15.2",
-    "customize-cra": "^0.9.1",
-    "http-proxy-middleware": "^1.0.3",
     "koa": "^2.12.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
@@ -21,7 +18,6 @@
     "moment": "^2.25.3",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
-    "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-keep-alive": "^2.5.2",
     "react-lazyload": "^2.6.7",
@@ -52,11 +48,16 @@
     ]
   },
   "devDependencies": {
+    "react-app-rewired": "^2.1.6",
+    "customize-cra": "^0.9.1",
+    "http-proxy-middleware": "^1.0.3",
+    "babel-plugin-import": "^1.13.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "antd-dayjs-webpack-plugin": "^1.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
