--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-loadable": "^5.5.0",
     "react-router-cache-route": "^1.8.4",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-window": "^1.8.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -48,16 +49,17 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.6",
-    "customize-cra": "^0.9.1",
-    "http-proxy-middleware": "^1.0.3",
-    "babel-plugin-import": "^1.13.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "antd-dayjs-webpack-plugin": "^1.0.0",
+    "babel-plugin-import": "^1.13.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "customize-cra": "^0.9.1",
+    "http-proxy-middleware": "^1.0.3",
+    "react-app-rewired": "^2.1.6",
+    "terser-brunch": "^4.0.0",
     "webpack-bundle-analyzer": "^3.8.0"
   }
 }
