--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "koa": "^2.12.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
+    "mobx": "^4.3.1",
+    "mobx-react": "^5.1.0",
     "moment": "^2.25.3",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-keep-alive": "^2.5.2",
     "react-lazyload": "^2.6.7",
@@ -38,9 +39,9 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+        "> 0.2%",
+        "last 2 versions",
+        "not ie <= 8"
     ],
     "development": [
       "last 1 chrome version",
